@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-05-25T08:17:23Z",
-  "count_outdated" : 2476,
-  "uniques_outdated" : 799,
+  "timestamp" : "2024-05-27T01:14:10Z",
+  "count_outdated" : 2498,
+  "uniques_outdated" : 802,
   "count" : 2522,
   "uniques" : 814,
   "views" : [
-    {
-      "timestamp": "2024-05-12T00:00:00Z",
-      "count": 22,
-      "count_minmax": [ 21, 22 ],
-      "count_decinc": [ 0, 22 ],
-      "uniques": 3,
-      "uniques_minmax": [ 2, 3 ],
-      "uniques_decinc": [ 0, 3 ]
-    },
     {
       "timestamp": "2024-05-13T00:00:00Z",
       "count": 1,
